src/objects/Utility_Rebate__c.object
<CustomObject>
    <fields>
        <fullName>Deemed_Savings__c</fullName>
        <label>Deemed Savings</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Heat_Type__c</fullName>
        <label>Heat Type</label>
        <picklist>
            <picklistValues>
                <fullName>Space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Either</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Post_Condition_R_Value__c</fullName>
        <label>Post-Condition R Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Condition_R_Value__c</fullName>
        <label>Pre-Condition R Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Installation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Installation</label>
        <referenceTo>Product_Installation__c</referenceTo>
        <relationshipLabel>Utility Rebates</relationshipLabel>
        <relationshipName>Utility_Rebates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rebate_Amount__c</fullName>
        <label>Rebate Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rebate_Amount_per_Square_Foot__c</fullName>
        <label>Rebate Amount per Square Foot</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rebate_as_a_Percent__c</fullName>
        <label>Rebate as a Percent</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Heat_Source__c</fullName>
        <label>Required Heat Source</label>
        <picklist>
            <picklistValues>
                <fullName>Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Either</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Up_to_Amount__c</fullName>
        <label>Up to Amount</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Utility_Provider_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Utility Provider</label>
        <referenceTo>Utility_Provider__c</referenceTo>
        <relationshipLabel>Utility Rebates (Electric Provider)</relationshipLabel>
        <relationshipName>Utility_Rebates1_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Utility Rebate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Installation__c</columns>
        <columns>Utility_Provider_del__c</columns>
        <columns>Rebate_Amount__c</columns>
        <columns>Heat_Type__c</columns>
        <columns>Required_Heat_Source__c</columns>
        <columns>Up_to_Amount__c</columns>
        <columns>Rebate_Amount_per_Square_Foot__c</columns>
        <columns>Rebate_as_a_Percent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Black_Hills_Gas</fullName>
        <columns>NAME</columns>
        <columns>Product_Installation__c</columns>
        <columns>Utility_Provider_del__c</columns>
        <columns>Rebate_Amount__c</columns>
        <columns>Heat_Type__c</columns>
        <columns>Required_Heat_Source__c</columns>
        <columns>Up_to_Amount__c</columns>
        <columns>Rebate_Amount_per_Square_Foot__c</columns>
        <columns>Rebate_as_a_Percent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Utility_Provider_del__c</field>
            <operation>contains</operation>
            <value>Black Hills</value>
        </filters>
        <filters>
            <field>Utility_Provider_del__c</field>
            <operation>contains</operation>
            <value>Gas</value>
        </filters>
        <label>Black Hills (Gas)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Only_Xcel_Blackhills</fullName>
        <columns>NAME</columns>
        <columns>Product_Installation__c</columns>
        <columns>Utility_Provider_del__c</columns>
        <columns>Rebate_Amount__c</columns>
        <columns>Heat_Type__c</columns>
        <columns>Required_Heat_Source__c</columns>
        <columns>Up_to_Amount__c</columns>
        <columns>Rebate_as_a_Percent__c</columns>
        <columns>Rebate_Amount_per_Square_Foot__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Utility_Provider_del__c</field>
            <operation>contains</operation>
            <value>black hills gas</value>
        </filters>
        <label>Only Xcel &amp; Blackhills Electric</label>
    </listViews>
    <listViews>
        <fullName>San_Miguel_Power_Assoc</fullName>
        <columns>NAME</columns>
        <columns>Product_Installation__c</columns>
        <columns>Utility_Provider_del__c</columns>
        <columns>Rebate_Amount__c</columns>
        <columns>Heat_Type__c</columns>
        <columns>Required_Heat_Source__c</columns>
        <columns>Up_to_Amount__c</columns>
        <columns>Rebate_Amount_per_Square_Foot__c</columns>
        <columns>Rebate_as_a_Percent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Utility_Provider_del__c</field>
            <operation>contains</operation>
            <value>San Miguel Power</value>
        </filters>
        <label>San Miguel Power Assoc</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Utility Rebate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Utility Rebates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>